# frequency-phaser

./: Cargo.toml  README.md
src/: main.rs  music.rs  presets.rs  state.rs
src/audio/: engine.rs  file_filter.rs  generator.rs  mod.rs
src/ui/: app.rs  render.rs
